# raytracing_hw

./: .gitignore  CMakeLists.txt  build.sh  start.sh
include/: Color.h  Light.h  Materials.h  Position.h  Primitives.h  Ray.h  Rotation.h  Scene.h
src/: Color.cpp  Light.cpp  Materials.cpp  Position.cpp  Primitives.cpp  Rotation.cpp  Scene.cpp  Scene.h  SceneRender.cpp  main.cpp
